--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-        <img src="./assets/pokeinfo.png" alt="PokeInfo">
+        <img src="./assets/pokeinfo.png" alt="PokeInfo" class="pokeinfo-img">
         <p>Digite o ID ou nome do pokemon que deseja consultar!</p>
 
         <form action="GET">
